# ida-mcp-server

./: .clang-tidy  .gitignore  CMakeLists.txt  install.sh
.claude/: settings.local.json
idasdk93/: .gitignore  README_93_STUBS.md  allmake.mak  defaults.mk  install_make.txt  install_visual.txt  makeenv_vc.mak  readme.txt
idasdk93/dbg/: arm_debmod.cpp  arm_debmod.h  arm_local_impl.cpp  arm_regs.cpp  arm_regs.hpp  bin_search.cpp  common_local_impl.cpp  common_stub_impl.cpp  dbg_plugmod.hpp  dbg_rpc_client.cpp  dbg_rpc_engine.cpp  dbg_rpc_handler.cpp  dbg_win.hpp  deb_arm.hpp  deb_pc.hpp  debmod.cpp  debmod.h  pc_debmod.cpp  pc_debmod.h  pc_regs.cpp  pc_regs.hpp  rpc_debmod.cpp  rpc_debmod.h  server.cpp  server.h
idasdk93/dbg/bochs/: bochsext.h
idasdk93/dbg/linux/: armlinux_stub.cpp  linux_debmod.cpp  linux_debmod.h  linux_local_impl.cpp  linux_stub.cpp  linux_user.cpp  makefile  stack_unwind.cpp  stack_unwind.hpp
idasdk93/dbg/win32/: makefile  w32sehch.cpp  win32_debmod.cpp  win32_debmod.h  win32_local_impl.cpp  win32_server.cpp  win32_stub.cpp  win32_user.cpp  win32_util.hpp  winbase_debmod.cpp  winbase_debmod.h
idasdk93/idalib/examples/: idacli.cpp  makefile
idasdk93/include/: fpro.h  ida93_new_apis.hpp
idasdk93/ldr/amiga/: amiga.cpp
idasdk93/ldr/aout/: common.cpp
idasdk93/ldr/ar/: arcmn.cpp
idasdk93/ldr/coff/: storclas.h  syms.h
idasdk93/ldr/dos/: dos.cpp  dos_ovr.cpp
idasdk93/ldr/elf/: elf.h  elfbase.h  elfr_arm.h  reader.cpp
idasdk93/ldr/geos/: geos.cpp
idasdk93/ldr/hex/: hex.cpp
idasdk93/ldr/hpsom/: hpsom.cpp
idasdk93/ldr/intelomf/: intelomf.cpp
idasdk93/ldr/javaldr/: javaldr.cpp
idasdk93/ldr/nlm/: nlm.cpp
idasdk93/ldr/pe/: common.cpp  common.h  cor.h  mycor.h  pe.h
idasdk93/ldr/pef/: pef.cpp
idasdk93/ldr/script_ldrs/: pdfldr.py  uimage.py
idasdk93/ldr/snes/: snes.cpp  super-famicom.hpp
idasdk93/module/: cfh_ha16.cpp  iohandler.hpp  mergecmn.cpp
idasdk93/module/6502/: ana.cpp  emu.cpp  ins.hpp
idasdk93/module/65816/: bt.cpp  emu.cpp  merge.cpp  out.cpp
idasdk93/module/78k0/: merge.cpp
idasdk93/module/78k0s/: ins.hpp  merge.cpp
idasdk93/module/80196/: ana.cpp  out.cpp
idasdk93/module/arc/: ana.cpp  arc.hpp  emu.cpp  ins.hpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/arm/: arm.hpp  notify_codes.hpp
idasdk93/module/avr/: ana.cpp  emu.cpp  ins.hpp  merge.cpp  notify_codes.hpp  out.cpp  reg.cpp
idasdk93/module/c39/: emu.cpp  merge.cpp
idasdk93/module/cr16/: ana.cpp  emu.cpp  merge.cpp
idasdk93/module/dsp56k/: ana.cpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/f2mc/: ana.cpp  ins.hpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/fr/: ana.cpp  emu.cpp  merge.cpp  out.cpp
idasdk93/module/h8/: ana.cpp  emu.cpp  h8.hpp  ins.hpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/h8500/: ana.cpp  emu.cpp  ins.hpp  merge.cpp  out.cpp
idasdk93/module/hppa/: emu.cpp  hppa_cfh.cpp  ins.hpp  merge.cpp  notify_codes.hpp  out.cpp  reg.cpp
idasdk93/module/i51/: merge.cpp
idasdk93/module/i860/: emu.cpp  ins.hpp
idasdk93/module/i960/: ana.cpp  emu.cpp  i960.hpp  ins.hpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/java/: ana.cpp  emu.cpp  fmtstr.cpp  ins.hpp  map.cpp  notify_codes.hpp  npool.cpp  npooluti.cpp  out.cpp  oututil.cpp  reg.cpp  upgrade.cpp
idasdk93/module/kr1878/: emu.cpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/m32r/: ana.cpp  emu.cpp  merge.cpp  reg.cpp
idasdk93/module/m740/: merge.cpp
idasdk93/module/m7700/: merge.cpp  reg.cpp
idasdk93/module/m7900/: ins.hpp  merge.cpp  out.cpp
idasdk93/module/mc68xx/: notify_codes.hpp
idasdk93/module/mn102/: merge.cpp
idasdk93/module/nec850/: ana.cpp  cfh.cpp  emu.cpp  ins.cpp  ins.hpp  makefile  merge.cpp  necv850.hpp  out.cpp  reg.cpp  regfinder.cpp
idasdk93/module/oakdsp/: ana.cpp  merge.cpp  oakdsp.hpp  out.cpp  reg.cpp
idasdk93/module/pdp11/: ana.cpp  ins.hpp  merge.cpp  out.cpp  pdp.hpp  reg.cpp
idasdk93/module/pic/: ana.cpp  emu.cpp  ins.hpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/ppc/: notify_codes.hpp
idasdk93/module/script/: msp430.py  proctemplate.py
idasdk93/module/sparc/: notify_codes.hpp
idasdk93/module/st20/: ana.cpp  ins.hpp  merge.cpp  reg.cpp
idasdk93/module/st7/: ins.hpp  merge.cpp  reg.cpp
idasdk93/module/st9/: emu.cpp  merge.cpp
idasdk93/module/tlcs900/: ana.cpp  merge.cpp
idasdk93/module/tms320c3/: emu.cpp  ins.hpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/tms320c5/: ana.cpp  emu.cpp  ins.hpp  out.cpp  reg.cpp
idasdk93/module/tms320c54/: ana.cpp  emu.cpp  ins.hpp  merge.cpp  notify_codes.hpp  out.cpp  reg.cpp
idasdk93/module/tms320c55/: ana.cpp  ins.hpp  merge.cpp  out.cpp  reg.cpp
idasdk93/module/tms320c6/: ana.cpp  emu.cpp  ins.cpp  ins.hpp  merge.cpp  out.cpp  reg.cpp  tms6.hpp
idasdk93/module/xa/: ana.cpp  emu.cpp  out.cpp  reg.cpp
idasdk93/module/z8/: emu.cpp  merge.cpp  out.cpp
idasdk93/module/z80/: ana.cpp  emu.cpp  i5.hpp  ins.hpp  merge.cpp  out.cpp
idasdk93/plugins/: makefile  pyplg.mak  qtplugin.mak
idasdk93/plugins/callee/: callee.cpp
idasdk93/plugins/choose/: choose.cpp
idasdk93/plugins/custdata/: custdata.cpp
idasdk93/verifier/: cverify.cpp  showmic.cpp  verify.cpp
idasdk93_stubs/: ida93_new_apis.hpp
include/: common.hpp
include/http/: server.hpp
include/mcp/: protocol.hpp  server.hpp
include/tools/: tools.hpp
src/: main.cpp
src/http/: auth.cpp  server.cpp
src/mcp/: protocol.cpp  server.cpp
src/tools/: auto_analysis.cpp  bin_search.cpp  bookmarks.cpp  callers.cpp  comments.cpp  control_flow.cpp  database.cpp  debugger.cpp  decl_compiler.cpp  decompile_all.cpp  demangling.cpp  dirtree_tools.cpp  entry_points.cpp  exec_scripts.cpp  exports.cpp  fixups.cpp  frames.cpp  function_context.cpp  functions.cpp  hexrays.cpp  import_entry.cpp  imports.cpp  indirect_branches.cpp  instructions.cpp  jumptables.cpp  memory.cpp  metadata.cpp  metadata_backup.cpp  microcode.cpp  names.cpp  navigation.cpp  offsets.cpp  patching.cpp  problems.cpp  read_bytes.cpp  reg_search.cpp  search.cpp  segments.cpp  snippets.cpp  strings.cpp  (+7 more)
(+166 files in other folders)
